  * detect_well_known_errors:
    - Skip sections that don't exist in piuparts.conf.
  * piuparts-slave.deb:
    - Restrict the ssh key added to master's authorized_keys to only run
      piuparts-master.
  * scripts-wheezy/post_setup_wheezy-fake-essential: New custom script to
    suppress some purge failures in wheezy.
  * New known problem: Database setup failure (issue).

  [ David Steele ]
  * detect_well_known_errors:
    - Replace the bash script with an equivalent Python script.
    - Sort known error and issue packages by reverse dependency count,
      separating bugged from everything else.
      (Closes: #698526)
    - Add a PTS link to issue and error summary entries.
    - Replace the known_problem COMMAND with PATTERN and EXCLUDE_PATTERN,
      and replace grep shell calls with python re modules calls, for a
      10x speedup.
    - Validate field names, and only use valid known problem conf files.
    - Minor HTML syntax fix.
    - Minor template integration.

  [ Holger Levsen ]
  * piuparts.py:
    - Add to ignored_files:
      + /var/log/fontconfig.log (Closes: #703810) - Thanks to Hideki Yamane.
  * slave_run:
    - Run slave_cleanup before starting the slave.
  * Bump Standards-Version to 3.9.4.

 -- Andreas Beckmann <anbe@debian.org>  Sat, 16 Mar 2013 00:14:13 +0100

piuparts (0.50) unstable; urgency=low

  [ Andreas Beckmann ]
  * piuparts.py:
    - Add to ignored_files:
      + /var/lib/dpkg/arch
      + /usr/lib/python2.[67]/dist-packages/python-support.pth
        broken symlinks caused by python-support (see #635493 and #385775,
        thanks David Steele)
    - Call dpkg-deb with --nocheck to allow bad version numbers.
    - Pass unqualified package names to apt-cache show for lenny support.
    - Support plain URLs or local paths as --testdebs-repo argument and
      prepend/append "deb", "file://", and "./" as needed.
    - Improve the "dirname part contains a symlink" test and report