@@ -2,3 +2,4 @@ piupartslib/__init__.py piupartslib
 piupartslib/conf.py piupartslib
 piupartslib/dependencyparser.py piupartslib
 piupartslib/packagesdb.py piupartslib
+piupartslib/known_problems.py piupartslib
